--- a/CourseWork/networks/CS39006/test2/topo.conf
+++ b/CourseWork/networks/CS39006/test2/topo.conf
@@ -5,3 +5,4 @@
    3       10.0.0.1        8113     1   2
    4       10.0.0.1        8112     1   2
 
+/* Topology details for network transactions for each nodes. */
