--- a/CourseWork/networks/CS39006/test2/topo.conf
+++ b/CourseWork/networks/CS39006/test2/topo.conf
@@ -6,3 +6,5 @@
    4       10.0.0.1        8112     1   2
 
 /* Topology details for network transactions for each nodes. */
+
+/* format: <node ID> <server IP> <server port> <Peer List> */
